--- a/efs-utils/APKBUILD
+++ b/efs-utils/APKBUILD
@@ -8,9 +8,13 @@ Linux."
 url="https://github.com/ajaquith/alpine-apks"
 arch="noarch"
 license="MIT"
+options="!check"
 depends="nfs-utils openssl python3 stunnel"
 makedepends=""
-install=""
+install="$pkgname.post-install
+         $pkgname.post-upgrade
+         $pkgname.pre-deinstall
+         $pkgname.post-deinstall"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/aws/efs-utils/archive/v$pkgver.tar.gz
         amazon-efs-mount-watchdog.initd
@@ -25,27 +29,19 @@ prepare() {
   patch -p1 -i "$srcdir"/mount.efs.patch
 }
 
-build() {
-	return 0
-}
-
-check() {
-	return 0
-}
-
 package() {
   echo 'Creating application directories'
   mkdir -p "$pkgdir"/etc/amazon/efs
   mkdir -p "$pkgdir"/etc/init.d
   mkdir -p "$pkgdir"/sbin
   mkdir -p "$pkgdir"/usr/bin
-  mkdir -p "$pkgdir"/usr/share/man
+  mkdir -p "$pkgdir"/usr/share/man/man8
   mkdir -p "$pkgdir"/usr/share/licenses
   mkdir -p "$pkgdir"/usr/share/info
 
   echo 'Copying application files'
-  install -Dm644 "$builddir"/dist/efs-utils.conf "$pkgdir"/etc/amazon/efs
-  install -Dm444 "$builddir"/dist/efs-utils.crt "$pkgdir"/etc/amazon/efs
+  install -Dm644 "$builddir"/dist/efs-utils.conf "$pkgdir"/etc/amazon/efs/
+  install -Dm444 "$builddir"/dist/efs-utils.crt "$pkgdir"/etc/amazon/efs/
   install -Dm755 "$builddir"/src/watchdog/__init__.py "$pkgdir"/usr/bin/amazon-efs-mount-watchdog
   install -Dm755 "$builddir"/src/mount_efs/__init__.py "$pkgdir"/sbin/mount.efs
   install -Dm755 amazon-efs-mount-watchdog.initd "$pkgdir"/etc/init.d/amazon-efs-mount-watchdog
@@ -56,7 +52,7 @@ package() {
   install -Dm644 "$builddir"/NOTICE "$pkgdir"/usr/share/info/NOTICE-"$pkgname-$pkgver".md
   install -Dm644 "$builddir"/requirements.txt "$pkgdir"/usr/share/info/REQUIREMENTS-"$pkgname-$pkgver".md
   install -Dm644 "$builddir"/LICENSE "$pkgdir"/usr/share/licenses/LICENSE-"$pkgname-$pkgver"
-  install -Dm644 "$builddir"/man/mount.efs.8 "$pkgdir"/usr/share/man
+  install -Dm644 "$builddir"/man/mount.efs.8 "$pkgdir"/usr/share/man/man8/
 }
 
 sha512sums="e1b0612a46cfcadad12357e483a2fb2d42680f24107b78156506f2cee17cbb74092a64070abaea5e860fc084f36a57517f06d7191e708be925970bc21a38bc2c  efs-utils-1.12.tar.gz
