--- a/efs-utils/APKBUILD
+++ b/efs-utils/APKBUILD
@@ -2,9 +2,8 @@
 # Maintainer: Andrew Jaquith <ajaquith@apache.org>
 pkgname=efs-utils
 pkgver=1.12
-pkgrel=0
-pkgdesc="Amazon Web Services Elastic File System Agent
-Linux."
+pkgrel=1
+pkgdesc="Amazon Web Services Elastic File System Agent"
 url="https://github.com/ajaquith/alpine-apks"
 arch="noarch"
 license="MIT"
