--- a/awslogs-agent/etc/awslogs.conf
+++ b/awslogs-agent/etc/awslogs.conf
@@ -43,7 +43,7 @@ use_gzip_http_content_encoding = true
 
 ## This queue size determine the max number of event batch loaded into memory. 10 is the default value.
 ## It can be reduced if the program consumes too much memory. 1 is the valid minimum value.
-#queue_size = 10
+queue_size = 10
 #
 ## Each log file is defined in its own section. The section name doesn't
 ## matter as long as its unique within this file.
@@ -124,3 +124,12 @@ use_gzip_http_content_encoding = true
 # ----------------------------------------------------------------------------------------------------------------------
 #  %c           Locale's appropriate date and time representation.                                      Tue Aug 16 21:30:00 1988 (en_US)
 # ----------------------------------------------------------------------------------------------------------------------
+
+[/var/log/messages]
+file = /var/log/messages
+log_group_name = syslog
+log_stream_name = {instance_id}
+datetime_format = %b %d %H:%M:%S
+time_zone = UTC
+buffer_duration = 5000
+initial_position = start_of_file
