--- a/awslogs-agent/APKBUILD
+++ b/awslogs-agent/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Andrew Jaquith <ajaquith@apache.org>
 pkgname=awslogs-agent
 pkgver=1.4.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Amazon Web Services CloudWatch Logs Agent"
 url="https://github.com/ajaquith/alpine-apks"
 arch="noarch"
 license="Amazon Software License"
 options="!check"
-depends="python3 curl"
+depends="python3 curl logrotate"
 makedepends=""
 install="$pkgname.pre-install
          $pkgname.post-install
@@ -20,6 +20,7 @@ source="https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-s
         etc/awslogs.confd
         etc/awslogs.logrotated
         etc/awslogs-version.sh
+        etc/aws.conf
         etc/awslogs.conf
         etc/init.d/awslogs
         etc/LICENSE"
@@ -42,6 +43,7 @@ package() {
   install -Dm644 "$startdir"/etc/awslogs.logrotated "$pkgdir"/etc/logrotate.d/awslogs
   install -Dm755 "$startdir"/etc/awslogs-version.sh "$pkgdir"/var/awslogs/bin/
   install -Dm600 "$startdir"/etc/awslogs.conf "$pkgdir"/var/awslogs/etc/
+  install -Dm600 "$startdir"/etc/aws.conf "$pkgdir"/var/awslogs/etc/
   sed -i "s/{{ pkgver }}/$pkgver/" "$pkgdir"/etc/init.d/awslogs
   sed -i "s/{{ pkgver }}/$pkgver/" "$pkgdir"/etc/logrotate.d/awslogs
   printf 'OK\n'
@@ -54,6 +56,7 @@ sha512sums="75b2776d59bc967cde502eb4e5676b7c34b5b96e8747de4b45e3327d34fba30ea84e
 9d535ca3d3bbb05510e74b0a4acf9524a48ec6d3157f9b5674fafe8e7528693d3746c937e57f99bfd6b876d5ada11c8e0a704d9831073a6fd81c04ca558fbcd6  awslogs.confd
 cdd7d75fc4d1b9bd93a8c73a7030ca9347baff7020234d9a6764fad050c61387ef5c94fe8b1f14dbc603588b05fc6da58a26a25471779efa88796528298dfbfe  awslogs.logrotated
 93cf883acbe373f7b832f9362e28b3f22d753f245845501f88ce164088ab1ad10c0276ddc61d7a589c27903daa7bca45593d11883d4498e3a214d0f1d59654eb  awslogs-version.sh
+ee0ebb2b0bf52ab3cffa6c550363f8ab825bc577dd832c9babf36082a3aa6285a377dfc5bb2b191faa21e23863e040a1360fefadd808bf12567dfc7928e3fe42  aws.conf
 be96f7a8fee83e58262520f27e5ad1125c6a5889ffb7aef145f055b25bb6c1fea3dbce740224b349b8479f057caec93e341400a188684553752d1bbb45a2b8e2  awslogs.conf
 abc8319015ad8726d22e461ca8730138eda7f0be2d0764578fd8a655f0e983d43084d3e46ba16a84c85d288cd7cdb9aa278e238da286c8dd0a1385c79e0f9021  awslogs
 c79655f756dd5728090891e58559873ec489631db01a57ea4052c60a593f9b9f941117af13c08a70c4354a2cfb48e726087410bd2f0aa6b3f59ffcd722755c4c  LICENSE"
